<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bodyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.ContactsFragment">

    <ScrollView
        android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/botonInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#3BBAFF"
        android:text="añadir"
        app:layout_constraintBottom_toBottomOf="@+id/insertarTelefono"
        app:layout_constraintEnd_toStartOf="@+id/insertarTelefono"
        app:layout_constraintTop_toTopOf="@+id/insertarTelefono" />

    <EditText
        android:id="@+id/insertarTelefono"
        android:layout_width="218dp"
...
        android:text="Nuevo contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
...
