...
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
        android:hint="@string/user_string"
...
        android:text="@string/password_string"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:autofillHints="password"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
...
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#3BBAFF"
        android:text="@string/tv_login"
        android:textAllCaps="true"
...
